Adding a check to see if the product is in stock when ordering